# AS_challenge

./: .gitattributes  .gitignore  AutonomousSystems2024.tex  README.md  build_and_extract_sim.sh  build_and_extraxt_sim.sh  preamble.tex  rosbag.bag
catkin_ws/src/basic_waypoint_pkg/: CMakeLists.txt  package.xml
catkin_ws/src/basic_waypoint_pkg/config/: trajectory_config.yaml
catkin_ws/src/basic_waypoint_pkg/include/: planner.h
catkin_ws/src/basic_waypoint_pkg/scripts/: manual_control.py
catkin_ws/src/basic_waypoint_pkg/src/: planner.cc  planner_node.cc
catkin_ws/src/config_rviz/: CMakeLists.txt
catkin_ws/src/config_rviz/config/: config.rviz
catkin_ws/src/config_rviz/launch/: rviz.launch
catkin_ws/src/controller_pkg/src/: controller_node.cpp
catkin_ws/src/global_planner/: CMakeLists.txt  package.xml
catkin_ws/src/global_planner/cfg/: rrt_planner.yaml
catkin_ws/src/global_planner/launch/: rrt_star_interactive.launch
catkin_ws/src/global_planner/src/: globalPlannerLib.cpp  rrt_star_interactive_node.cpp
catkin_ws/src/mapping/: CMakeLists.txt  package.xml
catkin_ws/src/mapping/launch/: octomap_server.launch
catkin_ws/src/perception/: CMakeLists.txt  package.xml
catkin_ws/src/perception/config/: junction_detection_config.yaml  lantern_detection_config.yaml
catkin_ws/src/perception/include/: LanternDetection.h  MapFilter.h  junction_detection.h  lantern_detection.h
catkin_ws/src/perception/launch/: perception.launch
catkin_ws/src/perception/msg/: Junction.msg  JunctionArray.msg
catkin_ws/src/perception/scripts/: dead_end_detection.py  junction_detection.py
catkin_ws/src/perception/src/: LanternDetection.cpp  MapFilter.cpp  junction_detection.cpp  lantern_detection.cpp
catkin_ws/src/planning/: CMakeLists.txt  package.xml
catkin_ws/src/planning/config/: planner_config.yaml  state_machine_config.yaml  trajectory_planner_config.yaml
catkin_ws/src/planning/include/: planner.h  state_machine.h  state_machine_mateus.h  trajectory_planner_node.h
catkin_ws/src/planning/launch/: planning.launch  waypoint_mission.launch
catkin_ws/src/planning/scripts/: bfs.txt  bfs_node.py  bfs_test.py  branch_entrance_listener.py  cave_explorer_node.py  cave_explorer_node_old.py  exploration_manager.py
catkin_ws/src/planning/src/: cave_explorer.cpp  cave_explorer.h  planner.cc  planner_node.cc  state_machine.cpp  trajectory_planner_node.cc
catkin_ws/src/simulation/: CMakeLists.txt
catkin_ws/src/simulation/launch/: all_in_one_with_manual_control.launch  all_in_one_with_planning.launch  simulation.launch  simulation_with_rviz.launch
catkin_ws/src/system/fla_msgs/: CMakeLists.txt
catkin_ws/src/utilities/config_rviz/: package.xml
catkin_ws/src/utilities/eigen_catkin/: CMakeLists.txt
catkin_ws/src/utilities/eigen_checks/: CMakeLists.txt
catkin_ws/src/utilities/fla_msgs/: CMakeLists.txt
catkin_ws/src/utilities/fla_utils/: CMakeLists.txt
catkin_ws/src/utilities/glog_catkin/: CMakeLists.txt
(+11 files in other folders)
